2004-05-20  Matthew Mueller  <donut@dakotacom.net>

	* arch/win32/win32.c: fixed win32 gr_*_mode funcs that I forgot to
	change the arg type for (d1x r1.5)

2004-05-20  Victor Rachels  <sekmu@tisiphone.dhs.org>

	* arch/win32/digi.c: altsounds (d1x r1.6)

2004-05-20  Matthew Mueller  <donut@dakotacom.net>

	* arch/win32/digi.c: fixed a major memory leak and removed a bit
	of redundancy (d1x r1.5)

	* arch/win32/digi.c: call digi_reset_digi_sounds in digi_close to
	fix crashing (d1x r1.4)

	* arch/win32/digi.c: win32's digi_start_sound was not calling
	DS_release_slot after setting .playing=0, resulting in a
	memleak. Thanks to Stefan Ring for catching this (d1x r1.9)

	* arch/win32/joyhh.c: remove joySetCapture in win32 joystick code,
	apparently it was somehow causing some joysticks (Sidewinder
	Precision 2) to only turn when the stick was moving, but not when
	at turned but held stationary.  And it was completely unused
	anyway.  Thanks to Stefan Ring for (somehow) finding this (d1x
	r1.4)

	* main/game.c: add alt+enter to toggle fullscreen (in addition to
	previous key combos (d1x r1.29)

	* arch/ogl/wgl.c: minor cleanup, use same for loop for filling r,
	g, and b values (d1x r1.15)

	* arch/ogl/gr.c: fix funky ogl gammaramp palette when getting hit
	sometimes (didn't handle negative palette steps) (d1x r1.34)

	* arch/ogl/ogl.c: add caching of weapon inner models, screen
	shatter effects, robot explosions and weapons, and some more
	always present stuff.  Also clean up ogl_cache_weapon_textures
	calling. (d1x r1.37)

2004-05-20  Bradley Bell  <btb@icculus.org>

	* main/kludge.c, main/game.c: move gr_renderstats and
	gr_badtexture back to game.c

2004-05-20  Matthew Mueller  <donut@dakotacom.net>

	* arch/ogl/ogl.c, include/gr.h, main/inferno.c: add -renderstats
	command-line arg to activate RENDERSTATS (d1x r1.36, r1.15, r1.33)

	* arch/ogl/ogl.c: fix last commit (d1x r1.35)

	* arch/ogl/ogl.c: add RENDERSTATS counter for number of textures