@@ -1,5 +1,9 @@
 2004-05-20  Matthew Mueller  <donut@dakotacom.net>
 
+	* arch/win32/joyhh.c, arch/win32/mouse.c: w32: check
+	-no(mouse|joystick) within respective _init() funcs (d1x r1.2,
+	r1.6)
+
 	* arch/win32/win32.c: fixed win32 gr_*_mode funcs that I forgot to
 	change the arg type for (d1x r1.5)
 
